inclass/ParNumbers.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParNumbers.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pExp -> Exp                                 (0)
	%start_pExp1 -> Exp1                               (1)
	%start_pExp2 -> Exp2                               (2)
	Integer -> L_integ                                 (3)
	Exp -> Exp '+' Exp1                                (4)
	Exp -> Exp1                                        (5)
	Exp1 -> Exp1 '*' Exp2                              (6)
	Exp1 -> Exp2                                       (7)
	Exp2 -> Integer                                    (8)
	Exp2 -> '(' Exp ')'                                (9)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'*'            { PT _ (TS _ 3) }
	'+'            { PT _ (TS _ 4) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pExp     rule  0
	%start_pExp1    rule  1
	%start_pExp2    rule  2
	Integer         rule  3
	Exp             rules 4, 5
	Exp1            rules 6, 7
	Exp2            rules 8, 9

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pExp -> . Exp                                (rule 0)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp            goto state 10
	Exp1           goto state 11
	Exp2           goto state 9

State 1

	%start_pExp1 -> . Exp1                              (rule 1)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp1           goto state 8
	Exp2           goto state 9

State 2

	%start_pExp2 -> . Exp2                              (rule 2)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp2           goto state 6

State 3

	Integer -> . L_integ                                (rule 3)

	L_integ        shift, and enter state 4


State 4

	Integer -> L_integ .                                (rule 3)

	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	%eof           reduce using rule 3


State 5

	Exp2 -> Integer .                                   (rule 8)

	')'            reduce using rule 8
	'*'            reduce using rule 8
	'+'            reduce using rule 8
	%eof           reduce using rule 8


State 6

	%start_pExp2 -> Exp2 .                              (rule 2)

	%eof           accept


State 7

	Exp2 -> '(' . Exp ')'                               (rule 9)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp            goto state 14
	Exp1           goto state 11
	Exp2           goto state 9

State 8

	%start_pExp1 -> Exp1 .                              (rule 1)
	Exp1 -> Exp1 . '*' Exp2                             (rule 6)

	'*'            shift, and enter state 12
	%eof           accept


State 9

	Exp1 -> Exp2 .                                      (rule 7)

	')'            reduce using rule 7
	'*'            reduce using rule 7
	'+'            reduce using rule 7
	%eof           reduce using rule 7


State 10

	%start_pExp -> Exp .                                (rule 0)
	Exp -> Exp . '+' Exp1                               (rule 4)

	'+'            shift, and enter state 13
	%eof           accept


State 11

	Exp -> Exp1 .                                       (rule 5)
	Exp1 -> Exp1 . '*' Exp2                             (rule 6)

	')'            reduce using rule 5
	'*'            shift, and enter state 12
	'+'            reduce using rule 5
	%eof           reduce using rule 5


State 12

	Exp1 -> Exp1 '*' . Exp2                             (rule 6)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp2           goto state 17

State 13

	Exp -> Exp '+' . Exp1                               (rule 4)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp1           goto state 16
	Exp2           goto state 9

State 14

	Exp -> Exp . '+' Exp1                               (rule 4)
	Exp2 -> '(' Exp . ')'                               (rule 9)

	')'            shift, and enter state 15
	'+'            shift, and enter state 13


State 15

	Exp2 -> '(' Exp ')' .                               (rule 9)

	')'            reduce using rule 9
	'*'            reduce using rule 9
	'+'            reduce using rule 9
	%eof           reduce using rule 9


State 16

	Exp -> Exp '+' Exp1 .                               (rule 4)
	Exp1 -> Exp1 . '*' Exp2                             (rule 6)

	')'            reduce using rule 4
	'*'            shift, and enter state 12
	'+'            reduce using rule 4
	%eof           reduce using rule 4


State 17

	Exp1 -> Exp1 '*' Exp2 .                             (rule 6)

	')'            reduce using rule 6
	'*'            reduce using rule 6
	'+'            reduce using rule 6
	%eof           reduce using rule 6


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 10
Number of terminals: 5
Number of non-terminals: 7
Number of states: 18
